secondary request demo works and cleanup